--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
 	
 	<div class="container">
-		<!--T´tulos-->
+		<!--Títulos-->
 		<div id="contenido">
 			<div id="header">
 				<div class="row text-center">
