--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 
 	<!--JavaScript-->
-	<script src="mytwitch.js"></script>
+	<script src="javascript.js"></script>
 
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>	
 </body>
